--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
-      <h1>Welcome to My Website</h1>
-      <p>Estimated Delivery Date</p>
-	<script src="script.js"></script>
+    	  
+    <h1>Estimated Delivery Date</h1>
+    <!--show current Day and future Day in 6 days-->    
+    <div id="m-date"></div>
+    
+    <script src="script.js"></script>
   </body>
 </html>
